<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bank.inquiry.InquiryFragment">

    <ImageView
        android:id="@+id/booking_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/booking_img" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardPreventCornerOverlap="true"
        android:layout_marginBottom="-40dp"
        app:cardCornerRadius="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Inquiry_about"
                android:textColor="#111738"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="-30dp"/>
            <Button
                android:id="@+id/Currencies_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Currencies_btn"
                android:textAllCaps="false"
                android:textColor="#2F2E41"
                app:backgroundTint="#A0D6CD"
                app:cornerRadius="30dp"
                android:textStyle="bold"
                android:background="@drawable/btn"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:id="@+id/Loans_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Loans_btn"
                android:textAllCaps="false"
                android:textColor="#2F2E41"
                app:backgroundTint="#A0D6CD"
                app:cornerRadius="30dp"
                android:textStyle="bold"
                android:paddingHorizontal="35dp"
                android:layout_marginBottom="15dp"

                android:background="@drawable/btn"/>

            <Button
                android:id="@+id/Deposits_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Deposits_btn"
                android:textAllCaps="false"
                android:textColor="#2F2E41"
                app:backgroundTint="#A0D6CD"
                app:cornerRadius="30dp"
                android:textStyle="bold"
                android:paddingHorizontal="25dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn"/>

            <Button
                android:id="@+id/Accounts_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Accounts_btn"
                android:textAllCaps="false"
                android:textColor="#2F2E41"
                app:backgroundTint="#A0D6CD"
                app:cornerRadius="30dp"
                android:textStyle="bold"
                android:paddingHorizontal="23dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>