<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".ui.auth.login.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="50dp"
        android:backgroundTint="@color/beige"
        app:cardCornerRadius="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Login"
                android:layout_gravity="center"
                android:textColor="@color/dark"
                android:textSize="36sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal"
                android:layoutDirection="ltr"

                android:layout_marginHorizontal="20dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:textColorHint="@color/grey2"
                    tools:ignore="TouchTargetSizeCheck">

                    <EditText
                        android:id="@+id/input_emaiil"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_email"
                        android:padding="10sp"
                        android:drawablePadding="10sp"
                        android:hint="Enter email or username"
                        android:background="@color/grey1"
                        android:inputType="textEmailAddress"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10sp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/grey2"
                    tools:ignore="TouchTargetSizeCheck"
                    app:boxStrokeColor="@color/black"

                    app:boxStrokeWidth="2sp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/input_passwoord"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/keyy"
                        android:drawablePadding="10dp"
                        android:hint="Enter password"
                        android:background="@color/grey1"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColorHint="@color/grey2"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="20dp"
                android:text="@string/forget_password"
                android:textColor="@color/dark"
                android:layout_gravity="end"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="80dp"
                />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                app:backgroundTint="@color/green"
                android:paddingHorizontal="50dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/or"
                android:layout_gravity="center"
                android:textColor="@color/dark"
                android:textSize="22sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layoutDirection="ltr"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/google_login"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="30dp"
                    app:srcCompat="@drawable/google"
                    tools:ignore="SpeakableTextPresentCheck" />
                <ImageButton
                    android:id="@+id/twitter_login"
                    android:layout_width="50dp"
                    android:layout_marginEnd="30dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/twitter"
                    tools:ignore="SpeakableTextPresentCheck" />
                <ImageButton
                    android:id="@+id/face_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/facebook"
                    tools:ignore="SpeakableTextPresentCheck" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layoutDirection="ltr"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don’t have account ? "
                    android:textColor="@color/grey2"
                    android:textSize="18sp"   />



                <TextView
                    android:id="@+id/btn_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign up"
                    android:textColor="@color/dark"
                    android:textSize="22sp"
                    android:textStyle="bold"

                    />



            </LinearLayout>
            <ProgressBar
                android:id="@+id/bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>